adding variable axis

--- a/index.html
+++ b/index.html
@@ -49,11 +49,16 @@
                 
           <section id="variations">
             <h5>Special Characters, Symbols and Numbers</h5>
-            <p>1234567890</p>
-            <p>.,’”?!@#$%^&*-=_+|\~`ß þ ŋ ĳ œ ŧ ə π © ™ ℗</p>
+            <p class="symbols">. , ’ ” ? ! @ # $ % ^ & * - = _ + | \ ~ ` ß   þ   ŋ   ĳ   œ   ŧ   ə   π   ©   ™  ℗</p>
+            <p class="numbers">1234567890</p>
           </section>
 
-    
+          <section id="axis">
+            <h5>Variable Axis</h5>
+            <p class="weight">Weight 200-900</p>
+            <p class="width">Width 50-175</p>
+            <p class="italic">Italic 0-1</p>
+          </section>
 
           </div>
           </section>
@@ -64,8 +69,8 @@
               <div class="text-wrapper">
                 <h4>Abigail Sullivan</h4>
                 <h4>Graphic Designer</h4>
-                <h4>UMass Dartmouth, Web Typography</h4>
-                <h4>Spring 2024</h4>
+                <h4>UMass Dartmouth</h4>
+                <h4>Web Typography Spring 2024</h4>
               </div>
             <div class="font-name">
               <h4>Condor</h4>
