images and spacing edits

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- <section class="page-wrapper"> -->
           <section id="history"> 
             <h1 class="history-header">History</h1>
-            <a href="#" class="custom-link">Download Condor</a>
+            <a href="https://djr.com/condor" class="custom-link">Download Condor</a>
                 <p class="history-paragraph">
                 Condor, a high-contrast sans serif font, emerged in 2009 as a testament to David Ross's immersion in the industrial cityscape of Lowell, Massachusetts. Drawn to the captivating lettering found on the old mill buildings, Ross envisioned a contemporary reinterpretation of the stylized sans serifs from the Art Deco period. Inspired by the thick-and-thin commercial lettering prevalent in Lowell, he sought to merge the simplicity of this style with the elegance intrinsic to Art Deco design. The city's industrial charm fueled Ross's creative process as he navigated away from the monoweight sans serifs, aiming to capture the essence of thick-and-thin forms. In crafting Condor, he deliberately avoided typical strategies employed to mitigate the unevenness of high-contrast faces, opting instead to let the inherent contrast shine. The result is a font characterized by rational structure, open forms, and pronounced curvature, perfectly suited for dazzling displays and a contemporary nod to the historic influences that inspired its creation.
                 </p>
@@ -40,12 +40,12 @@
 
           <section id="alphabet">
             <h2>Full Alphabet</h2>
-            <p class="light">AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
-              <p class="lightslant">AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
-              <p class="regular">AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
-              <p class="regularslant">AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
-              <p class="bold">AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
-              <p class="boldslant">AaBcCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWxYyZz</p>
+            <p class="light">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
+              <p class="lightslant">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
+              <p class="regular">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
+              <p class="regularslant">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
+              <p class="bold">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
+              <p class="boldslant">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
           </section>
                 
           <section id="variations">
