meta data and readme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Abigail Sullivan's Condor Font Site with Variable text and downloadable button">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Font, Condor, Industrial fonts, Art Deco, Art Deco fonts, Abigail Sullivan, University of Massachusetts Dartmouth, UMass Dartmouth, UMD, College of Visual and Performing Arts, CVPA, Graphic Design">
+    <meta name="author" content="Abigail Sullivan">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="navigation.css">
     <title>Variable Type Specimen</title>
