css grid for alphabet

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </section>
 
           <section id="alphabet">
-            <h2>Full Alphabet</h2>
+            <h2 class="alphabet">Full Alphabet</h2>
             <p class="light">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
               <p class="lightslant">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
               <p class="regular">Aa Bc Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Wx Yy Zz</p>
